--- a/examples/multi-shops/docker-compose.yml
+++ b/examples/multi-shops/docker-compose.yml
@@ -1,3 +1,18 @@
+shop513:
+  image: dnhsoft/shopware:5.1.3
+  links:
+   - db513
+  ports:
+   - "8000:80"
+  environment:
+   SWDB_HOST: db513
+db513:
+  image: tutum/mysql:5.6
+  environment:
+   MYSQL_PASS: 123456
+
+
+
 shop434:
   image: dnhsoft/shopware:4.3.4
   links:
@@ -25,7 +40,7 @@ db433:
    MYSQL_PASS: 123456
 
 shop432:
-  image: dnhsoft/shopware:4.3.2
+  image: dnhsoft/shopware:4.3.2.d
   links:
    - db432
   ports:
